--- a/index.html
+++ b/index.html
@@ -77,34 +77,55 @@
     </header>
     <main>
       <!-- Section - Hero -->
-      <section>
+      <section class="section-hero">
         <div class="container">
-          <h1>
-            Treat yourself or a loved one to our finest ingredients for a moment
-            of pure delight!
-          </h1>
-          <button type="button">Buy now</button>
-          <a href="">How it’s made</a>
-          <a href="">scroll down <img src="./img/chewron-down.svg" alt="" /></a>
+          <div class="hero__wrap">
+            <h1 class="main-heading">
+              Treat yourself or a loved one to<br />our finest ingredients for a
+              moment of pure delight!
+            </h1>
+            <div class="hero__buttons-wrap">
+              <div class="hero__cta-wrap">
+                <button class="button" type="button">Buy now</button>
+                <a class="button is-secondary" href="#">How it’s made</a>
+              </div>
+              <a class="button-scroll" href="#section-taste"
+                >scroll down
+                <svg
+                  class="button-scroll__icon"
+                  width="22"
+                  height="22"
+                  viewBox="0 0 22 22"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M11.6508 12.2835C11.5656 12.3694 11.4642 12.4376 11.3525 12.4842C11.2408 12.5307 11.121 12.5547 11 12.5547C10.879 12.5547 10.7592 12.5307 10.6475 12.4842C10.5358 12.4376 10.4344 12.3694 10.3492 12.2835L6.15084 8.076C6.06562 7.99008 5.96424 7.92189 5.85253 7.87535C5.74083 7.82881 5.62102 7.80485 5.50001 7.80485C5.37899 7.80485 5.25918 7.82881 5.14748 7.87535C5.03577 7.92189 4.93439 7.99008 4.84917 8.076C4.67844 8.24775 4.58261 8.48008 4.58261 8.72225C4.58261 8.96442 4.67844 9.19675 4.84917 9.3685L9.05668 13.576C9.5723 14.091 10.2713 14.3802 11 14.3802C11.7288 14.3802 12.4277 14.091 12.9433 13.576L17.1509 9.3685C17.3202 9.19776 17.4157 8.96731 17.4167 8.72684C17.4174 8.6062 17.3943 8.4866 17.3486 8.37492C17.303 8.26324 17.2358 8.16166 17.1509 8.076C17.0656 7.99008 16.9643 7.92189 16.8525 7.87535C16.7408 7.82881 16.621 7.80485 16.5 7.80485C16.379 7.80485 16.2592 7.82881 16.1475 7.87535C16.0358 7.92189 15.9344 7.99008 15.8492 8.076L11.6508 12.2835Z"
+                    fill="#FD9222"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
         </div>
       </section>
       <!-- Section - Features -->
-      <section>
+      <section class="section-features">
         <div class="container">
-          <h2>Section Features</h2>
-          <ul>
-            <li>
-              <h3>Unsurpassed taste</h3>
-              <p>
+          <h2 class="visually-hidden">Section Features</h2>
+          <ul class="features__list">
+            <li class="features__list-item">
+              <h3 class="card-heading">Unsurpassed taste</h3>
+              <p class="features__text">
                 Crafted with the finest quality cocoa beans and a dedication to
                 perfection, each bite is a decadent experience that simply
                 cannot be matched. Savor the richness and complexity of our
                 Unsurpassed Taste and discover a new level of chocolate bliss.
               </p>
             </li>
-            <li>
-              <h3>Affordable price</h3>
-              <p>
+            <li class="features__list-item">
+              <h3 class="card-heading">Affordable price</h3>
+              <p class="features__text">
                 Indulge in high-quality chocolate without breaking the bank with
                 Simply Chocolate's selection of affordable treats. Enjoy
                 mouth-watering truffles and velvety chocolate bars without
@@ -112,9 +133,9 @@
                 in affordable luxury today.
               </p>
             </li>
-            <li>
-              <h3>Own production</h3>
-              <p>
+            <li class="features__list-item">
+              <h3 class="card-heading">Own production</h3>
+              <p class="features__text">
                 We take pride in our own production process, ensuring that every
                 step is carefully crafted to perfection. From selecting the
                 finest ingredients to handcrafting each piece, our attention to
@@ -125,7 +146,7 @@
         </div>
       </section>
       <!-- Section - Taste  -->
-      <section>
+      <section id="section-taste">
         <div class="container">
           <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION</h2>
           <p>
