008 - fix testimonial button

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
       </div>
     </footer>
 
-    <div class="backdrop-overlay is-open">
+    <div class="backdrop-overlay">
       <div class="modal">
         <svg class="modal__close-btn" width="28" height="28">
           <use href="./img/icons.svg#icon-close"></use>
